--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>HelloSpringCloudAlibaba</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>pom</packaging>
+    <!--注册nacos-->
+    <modules>
+        <module>hi-nacos</module>
+    </modules>
     <properties>
         <!-- java版本 -->
         <java.version>1.8</java.version>
