--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
     <groupId>com.seaside</groupId>
     <artifactId>HelloSpringCloudAlibaba</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -17,12 +11,14 @@
     <!--注册nacos-->
     <modules>
         <module>hi-nacos</module>
+        <module>hi-stock</module>
+        <module>hi-order</module>
     </modules>
     <properties>
         <!-- java版本 -->
         <java.version>1.8</java.version>
         <!-- SpringBoot版本 -->
-        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.3.7.RELEASE</spring.boot.version>
         <!-- Spring Cloud Alibaba 版本 -->
         <spring.cloud.alibaba>2.2.7.RELEASE</spring.cloud.alibaba>
         <!-- Spring Cloud 版本 -->
